[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/Pertti.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Level.gd" type="Script" id=2]
[ext_resource path="res://Assets/NotoSans-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/hurt.wav" type="AudioStream" id=4]
[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=5]
[ext_resource path="res://Assets/explosion.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=2]
size = 60
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 60
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Shader" id=7]
code = "    shader_type canvas_item;

uniform float amount : hint_range(0,0.5);

vec4 sample_glow_pixel(sampler2D tex, vec2 uv) {
   float hdr_threshold = amount; 
    return max(textureLod(tex, uv, 2.0) - hdr_threshold, vec4(0.0));
}

void fragment() {
    vec2 ps = SCREEN_PIXEL_SIZE;
    // Get blurred color from pixels considered glowing
    vec4 col0 = sample_glow_pixel(SCREEN_TEXTURE, SCREEN_UV + vec2(-ps.x, 0));
    vec4 col1 = sample_glow_pixel(SCREEN_TEXTURE, SCREEN_UV + vec2(ps.x, 0));
    vec4 col2 = sample_glow_pixel(SCREEN_TEXTURE, SCREEN_UV + vec2(0, -ps.y));
    vec4 col3 = sample_glow_pixel(SCREEN_TEXTURE, SCREEN_UV + vec2(0, ps.y));

    vec4 col = texture(SCREEN_TEXTURE, SCREEN_UV);
    vec4 glowing_col = 0.25 * (col0 + col1 + col2 + col3);

    COLOR = vec4(col.rgb + glowing_col.rgb, col.a);
}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )
shader_param/amount = null

[node name="Level" type="Node2D"]
script = ExtResource( 2 )

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Score" type="Timer" parent="."]
autostart = true

[node name="Pertti" parent="." instance=ExtResource( 1 )]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 960, 540 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Health" type="Label" parent="HUD"]
margin_left = 4.0
margin_right = 267.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 2 )
text = "Health: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="HUD"]
margin_left = 4.0
margin_top = 86.64
margin_right = 41.0
margin_bottom = 109.64
custom_fonts/font = SubResource( 3 )
text = "Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" type="Node" parent="HUD"]
pause_mode = 2
script = ExtResource( 5 )

[node name="Resume" type="ToolButton" parent="HUD/PauseMenu"]
margin_left = 875.0
margin_top = 400.0
margin_right = 1078.0
margin_bottom = 477.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.545098, 1, 0.486275, 1 )
custom_colors/font_color_pressed = Color( 0.231373, 0.67451, 0.172549, 1 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="ToolButton" parent="HUD/PauseMenu"]
margin_left = 875.0
margin_top = 300.0
margin_right = 1055.0
margin_bottom = 377.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.305882, 0.305882, 1 )
custom_colors/font_color_pressed = Color( 0.67451, 0.172549, 0.172549, 1 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Label" parent="HUD/PauseMenu"]
margin_left = 875.0
margin_top = 100.0
margin_right = 1055.0
margin_bottom = 169.0
custom_fonts/font = SubResource( 6 )
text = "Paused"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Node" parent="HUD"]
pause_mode = 2

[node name="Restart" type="ToolButton" parent="HUD/GameOver"]
margin_left = 875.0
margin_top = 400.0
margin_right = 1078.0
margin_bottom = 477.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.545098, 1, 0.486275, 1 )
custom_colors/font_color_pressed = Color( 0.231373, 0.67451, 0.172549, 1 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="ToolButton" parent="HUD/GameOver"]
margin_left = 875.0
margin_top = 300.0
margin_right = 1055.0
margin_bottom = 377.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.305882, 0.305882, 1 )
custom_colors/font_color_pressed = Color( 0.67451, 0.172549, 0.172549, 1 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game Over" type="Label" parent="HUD/GameOver"]
margin_left = 875.0
margin_top = 100.0
margin_right = 1142.0
margin_bottom = 169.0
custom_fonts/font = SubResource( 6 )
text = "Game Over"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="HUD"]
visible = false
material = SubResource( 8 )
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="gameover" from="." to="Pertti" method="_on_Level_gameover"]
[connection signal="pause" from="." to="HUD/PauseMenu" method="_on_Level_pause"]
[connection signal="timeout" from="Score" to="." method="_on_Score_timeout"]
[connection signal="collision" from="Pertti" to="." method="_on_Pertti_collision"]
[connection signal="done" from="Pertti" to="." method="_on_Pertti_done"]
[connection signal="pressed" from="HUD/PauseMenu/Resume" to="HUD/PauseMenu" method="_on_Resume_pressed"]
[connection signal="pressed" from="HUD/PauseMenu/Quit" to="HUD/PauseMenu" method="_on_Quit_pressed"]
[connection signal="pressed" from="HUD/GameOver/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="HUD/GameOver/Quit" to="." method="_on_Quit_pressed"]
